fix(checkbox): fix input and label alignment (#186)

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -137,6 +137,9 @@
         line-height: inherit;
 
         &[type='checkbox'] {
+            position: relative;
+            top: 1px;
+
             box-sizing: border-box;
             padding: 0;
         }
